docs/api/qiskit/0.37/qiskit.providers.fake_provider.FakeProvider.mdx
---
title: FakeProvider (v0.37)
description: API reference for qiskit.providers.fake_provider.FakeProvider in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeProvider
---

# FakeProvider

<Class id="qiskit.providers.fake_provider.FakeProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/fake_provider.py" signature="FakeProvider" modifiers="class">
  Bases: [`qiskit.providers.provider.ProviderV1`](qiskit.providers.ProviderV1 "qiskit.providers.provider.ProviderV1")

  Fake provider containing fake V1 backends.

  Only filtering backends by name is implemented. This class contains all fake V1 backends availabe in the [`qiskit.providers.fake_provider`](providers_fake_provider#module-qiskit.providers.fake_provider "qiskit.providers.fake_provider").

  ## Methods

  <span id="qiskit-providers-fake-provider-fakeprovider-backends" />

  ### backends

  <Function id="qiskit.providers.fake_provider.FakeProvider.backends" signature="FakeProvider.backends(name=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[Backend](qiskit.providers.Backend "qiskit.providers.Backend")]
  </Function>

  <span id="qiskit-providers-fake-provider-fakeprovider-get-backend" />

  ### get\_backend

  <Function id="qiskit.providers.fake_provider.FakeProvider.get_backend" signature="FakeProvider.get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [Backend](qiskit.providers.Backend "qiskit.providers.Backend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>

  ## Attributes

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeProvider.version" attributeValue="1" />
</Class>

